# app-duck

./: CMakeLists.txt  hxzp.code-workspace  hxzp_f103ve.overlay  hxzp_main.overlay  prj.conf
scripts/jlink/: flash.jlink
src/: key.cpp  key.h  lcd.cpp  lcd.h  led.cpp  led.h  main.cpp
